# spline_problems

./: CMakeLists.txt  package.xml  spline_problems.kdev4
include/spline_problems/: adaptive_s_curve_profile.hpp  easy_s_curve.hpp  probleme1.hpp
launch/: adaptive_s_curve.launch
src/: adaptive_s_curve_profile.cpp  easy_s_curve.cpp  min_jerk.cpp  probleme1.cpp  tri_acc_profile.cpp
